[tool.poetry]
name = "DefaultCreds_cheat_sheet"
version = "0.4"
authors = ["ihebski"]
description = "One place for all the default credentials to assist pentesters during an engagement, this document has several products default login/password gathered from multiple sources."
readme = "README.md"
homepage = "https://github.com/ihebski/DefaultCreds-cheat-sheet"
repository = "https://github.com/ihebski/DefaultCreds-cheat-sheet/issues"

classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]

packages = [
    { include = "DefaultCreds"}
]
[tool.poetry.scripts]
creds = 'DefaultCreds.creds:run'

[tool.poetry.dependencies]
python = "^3.8.0"
tinydb = "^4.3"
fire = "^0.5.0"
prettytable = "^3.6.0"
pathlib = "^1.0.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
